<resources>
    <string name="shr_app_name">Shrine</string>
    <string name="shr_hint_username">Username</string>
    <string name="shr_hint_password">Password</string>
    <string name="shr_button_next">Next</string>
    <string name="shr_button_cancel">Cancel</string>
    <string name="shr_error_password">Password must contain at least 8 characters.</string>
    <string name="shr_filter_title">Filter</string>
    <string name="shr_search_title">Search</string>
    <string name="shr_product_title">Title</string>
    <string name="shr_product_description">Secondary text</string>

    <!-- Shrine backdrop menu labels -->
    <string name="shr_featured_label">Featured</string>
    <string name="shr_apartment_label">Apartment</string>
    <string name="shr_accessories_label">Accessories</string>
    <string name="shr_shoes_label">Shoes</string>
    <string name="shr_tops_label">Tops</string>
    <string name="shr_bottoms_label">Bottoms</string>
    <string name="shr_dresses_label">Dresses</string>
    <string name="shr_account_label">My Account</string>

    <string name="menu_produce_detail_add_cart">Add Cart</string>
    <string name="menu_produce_detail_favorite">Favorite</string>

    <string name="product_detail_color">Color</string>
    <string name="product_detail_select_size">Select Size</string>
    <string name="product_detail_more_detail">More details</string>
    <string name="product_detail_add_to_cart">Add to cart</string>
    <string name="product_detail_you_may_like">You\'ll also like</string>

    <string name="shopping_cart_cart">Cart</string>
    <string name="shopping_cart_count">%1$d items</string>
    <string name="shopping_cart_total">Total</string>
    <string name="shopping_cart_subtotal">Subtotal</string>
    <string name="shopping_cart_shipping">Shipping</string>
    <string name="shopping_cart_tax">Tax</string>
    <string name="shopping_cart_checkout">Proceed to checkout</string>
</resources>