<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <ImageButton
        android:id="@+id/ivCollapseShoppingCart"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerShoppingCart"
        app:srcCompat="@drawable/shopping_cart_expansion_indicator" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="8dp"
        android:text="@string/shopping_cart_cart"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/ivCollapseShoppingCart"
        app:layout_constraintStart_toStartOf="@+id/ivCollapseShoppingCart"
        app:layout_constraintTop_toTopOf="@+id/ivCollapseShoppingCart" />

    <TextView
        android:id="@+id/tvShoppingCartCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="2 ITEMS"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/ivCollapseShoppingCart"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/ivCollapseShoppingCart" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintLeft_toLeftOf="@id/textView4"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivCollapseShoppingCart" />

    <com.google.codelabs.mdc.java.shrine.view.listview.LoadAllListView
        android:id="@+id/lvShoppingCart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginLeft="56dp"
        android:gravity="center_vertical"
        android:text="@string/shopping_cart_total"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lvShoppingCart" />

    <TextView
        android:id="@+id/tvShoppingCartTotal"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginRight="12dp"
        android:fontFamily="monospace"
        android:gravity="center_vertical"
        android:text="$300.60"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lvShoppingCart" />

    <GridLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="56dp"
        android:layout_marginRight="12dp"
        android:columnCount="2"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView6">

        <TextView
            android:text="@string/shopping_cart_subtotal"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvShoppingCartSubtotal"
            android:layout_gravity="right"
            android:fontFamily="monospace"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <TextView
            android:text="@string/shopping_cart_shipping"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvShoppingCartShipping"
            android:layout_gravity="right"
            android:fontFamily="monospace"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <TextView
            android:text="@string/shopping_cart_tax"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tvShoppingCartTax"
            android:layout_gravity="right"
            android:fontFamily="monospace"
            android:textColor="@android:color/black"
            android:textSize="14sp" />
    </GridLayout>

    <Button
        android:layout_width="0dp"
        android:layout_height="48dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/bg_product_detail_add_to_cart"
        android:text="@string/shopping_cart_checkout"
        android:elevation="12dp"/>
</android.support.constraint.ConstraintLayout>